@@ -4,32 +4,32 @@
     "item.xnet.connector_upgrade": "Connector Upgrade Kit",
 
     "block.xnet.facade": "Facade",
-    "block.xnet.facade_blue": "Blue Facade",
-    "block.xnet.facade_red": "Red Facade",
-    "block.xnet.facade_yellow": "Yellow Facade",
-    "block.xnet.facade_green": "Green Facade",
-    "block.xnet.facade_routing": "Routing Facade",
+    "item.xnet.facade_blue": "Blue Facade",
+    "item.xnet.facade_red": "Red Facade",
+    "item.xnet.facade_yellow": "Yellow Facade",
+    "item.xnet.facade_green": "Green Facade",
+    "item.xnet.facade_routing": "Routing Facade",
 
     "block.xnet.connector": "Connector",
-    "block.xnet.connector_blue": "Blue Connector",
-    "block.xnet.connector_red": "Red Connector",
-    "block.xnet.connector_yellow": "Yellow Connector",
-    "block.xnet.connector_green": "Green Connector",
-    "block.xnet.connector_routing": "Routing Connector",
+    "item.xnet.connector_blue": "Blue Connector",
+    "item.xnet.connector_red": "Red Connector",
+    "item.xnet.connector_yellow": "Yellow Connector",
+    "item.xnet.connector_green": "Green Connector",
+    "item.xnet.connector_routing": "Routing Connector",
 
     "block.xnet.advanced_connector": "Advanced Connector",
-    "block.xnet.advanced_connector_blue": "Advanced Blue Connector",
-    "block.xnet.advanced_connector_red": "Advanced Red Connector",
-    "block.xnet.advanced_connector_yellow": "Advanced Yellow Connector",
-    "block.xnet.advanced_connector_green": "Advanced Green Connector",
-    "block.xnet.advanced_connector_routing": "Advanced Routing Connector (NOT)",
+    "item.xnet.advanced_connector_blue": "Advanced Blue Connector",
+    "item.xnet.advanced_connector_red": "Advanced Red Connector",
+    "item.xnet.advanced_connector_yellow": "Advanced Yellow Connector",
+    "item.xnet.advanced_connector_green": "Advanced Green Connector",
+    "item.xnet.advanced_connector_routing": "Advanced Routing Connector (NOT)",
 
     "block.xnet.netcable": "Network Cable",
-    "block.xnet.netcable_blue": "Blue Network Cable",
-    "block.xnet.netcable_red": "Red Network Cable",
-    "block.xnet.netcable_yellow": "Yellow Network Cable",
-    "block.xnet.netcable_green": "Green Network Cable",
-    "block.xnet.netcable_routing": "Routing Network Cable",
+    "item.xnet.netcable_blue": "Blue Network Cable",
+    "item.xnet.netcable_red": "Red Network Cable",
+    "item.xnet.netcable_yellow": "Yellow Network Cable",
+    "item.xnet.netcable_green": "Green Network Cable",
+    "item.xnet.netcable_routing": "Routing Network Cable",
 
     "block.xnet.redstone_proxy": "Redstone Proxy",
     "block.xnet.redstone_proxy_upd": "Redstone Proxy (update)",
